--- a/investors.html
+++ b/investors.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="container">
             <div class="header__top">
-                <a href="./" class="logo">
+                <a href="./" class="logo header__logo">
                     <img src="dist/images/logo.svg" alt="" class="logo__img">
                 </a>
                 <nav class="menu header__menu">
@@ -739,34 +739,34 @@
     <footer class="footer main__footer">
         <div class="container">
             <div class="row">
-                <div class="col-3">
-                    <a href="./" class="logo">
+                <div class="col-lg-3 footer__left">
+                    <a href="./" class="logo footer__logo">
                         <img src="dist/images/logo-white.svg" alt="" class="logo__img">
                     </a>
-                    <p class="footer__about tdu">iKapitalist Ltd. — Инвестиционная и Заёмная Краудфандинговая Платформа
-                    </p>
-                    <a href="#" class="footer__link">Вакансии</a>
+                    <p class="footer__about tdu">iKapitalist Ltd. — Инвестиционная и Заёмная Краудфандинговая Платформа</p>
+                    <a href="#" class="footer__link footer__link_vacancy">Вакансии</a>
                     <div class="footer__copyright tdu">Copyright © 2020 All rights reserved.</div>
                 </div>
-                <div class="col-3">
+                <div class="col-lg-3">
                     <div class="footer__title">Адрес</div>
                     <p class="footer__text footer__address tdu">Мангилик Ел, 55, блок С4.2, офис 265
                         Нур-Султан, Казахстан</p>
-                    <div class="footer__item">
-                        <a href="#" class="footer__link">+77001780018</a>
-                    </div>
-                    <div class="footer__item">
-                        <a href="#" class="footer__link">info@ikapitalist.kz</a>
+                    <div class="footer__contacts">
+                        <div class="footer__item">
+                            <a href="#" class="footer__link">+77001780018</a>
+                        </div>
+                        <div class="footer__item">
+                            <a href="#" class="footer__link">info@ikapitalist.kz</a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6">
                     <div class="footer__title">Лицензия</div>
                     <p class="footer__text">iKapitalist Ltd. авторизован финансовым регулятором МФЦА («AFSA») на
                         осуществление деятельности в качестве инвестиционной и заёмной краудфандинговой платформы, в
                         тестовом окружении ФинТех лаборатории (регуляторная песочница МФЦА) в соответствии с лицензией
                         АFSA-G-LA-2020-0002 сроком действия до 07.11.2021 года.</p>
-                    <p class="footer__text">Статус лицензии и ее действительность могут быть <br> проверены на сайте
-                        AFSA</p>
+                    <p class="footer__text">Статус лицензии и ее действительность могут быть <br> проверены на сайте AFSA</p>
 
                 </div>
             </div>
