--- a/referal.html
+++ b/referal.html
@@ -14,11 +14,17 @@
     <header class="header">
         <div class="container">
             <div class="header__top">
-                <a href="./" class="logo">
+                <a href="./" class="logo header__logo">
                     <img src="dist/images/logo.svg" alt="" class="logo__img">
                 </a>
                 <nav class="menu header__menu">
                     <ul class="menu__list">
+                        <div class="menu__header">
+                            <a href="./" class="logo menu__logo">
+                                <img src="dist/images/logo.svg" alt="" class="logo__img">
+                            </a>
+                            <button class="close-btn menu__close"></button>
+                        </div>
                         <li class="menu__item">
                             <a href="./companies.html" class="menu__link">
                                 <img src="dist/images/icons/build.svg" alt="" class="menu__icon">
@@ -60,7 +66,7 @@
     </header>
     <main class="main">
 
-        <section class="offers">
+        <!-- <section class="offers">
             <div class="container">
                 <h1 class="title1">Приглашай, сопровождай, зарабатывай</h1>
                 <p class="offers__subtitle">Вместе мы делаем казахстанский бизнес сильнее</p>
@@ -150,41 +156,40 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
     </main>
     <footer class="footer main__footer">
         <div class="container">
             <div class="row">
-                <div class="col-3">
-                    <a href="./" class="logo">
+                <div class="col-lg-3 footer__left">
+                    <a href="./" class="logo footer__logo">
                         <img src="dist/images/logo-white.svg" alt="" class="logo__img">
                     </a>
-                    <p class="footer__about tdu">iKapitalist Ltd. — Инвестиционная и Заёмная Краудфандинговая Платформа
-                    </p>
-                    <a href="#" class="footer__link">Вакансии</a>
+                    <p class="footer__about tdu">iKapitalist Ltd. — Инвестиционная и Заёмная Краудфандинговая Платформа</p>
+                    <a href="#" class="footer__link footer__link_vacancy">Вакансии</a>
                     <div class="footer__copyright tdu">Copyright © 2020 All rights reserved.</div>
                 </div>
-                <div class="col-3">
+                <div class="col-lg-3">
                     <div class="footer__title">Адрес</div>
                     <p class="footer__text footer__address tdu">Мангилик Ел, 55, блок С4.2, офис 265
                         Нур-Султан, Казахстан</p>
-                    <div class="footer__item">
-                        <a href="#" class="footer__link">+77001780018</a>
-                    </div>
-                    <div class="footer__item">
-                        <a href="#" class="footer__link">info@ikapitalist.kz</a>
+                    <div class="footer__contacts">
+                        <div class="footer__item">
+                            <a href="#" class="footer__link">+77001780018</a>
+                        </div>
+                        <div class="footer__item">
+                            <a href="#" class="footer__link">info@ikapitalist.kz</a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6">
                     <div class="footer__title">Лицензия</div>
                     <p class="footer__text">iKapitalist Ltd. авторизован финансовым регулятором МФЦА («AFSA») на
                         осуществление деятельности в качестве инвестиционной и заёмной краудфандинговой платформы, в
                         тестовом окружении ФинТех лаборатории (регуляторная песочница МФЦА) в соответствии с лицензией
                         АFSA-G-LA-2020-0002 сроком действия до 07.11.2021 года.</p>
-                    <p class="footer__text">Статус лицензии и ее действительность могут быть <br> проверены на сайте
-                        AFSA</p>
-
+                    <p class="footer__text">Статус лицензии и ее действительность могут быть <br> проверены на сайте AFSA</p>
                 </div>
             </div>
         </div>
