added adaptive to Companies, Investors pages

--- a/companies.html
+++ b/companies.html
@@ -62,7 +62,7 @@
         <section class="banner">
             <div class="container">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-lg-6">
                         <div class="banner__main">
                             <div class="banner__inf">
                                 <h1 class="title1 banner__title">Инвестиции</h1>
@@ -82,7 +82,7 @@
                             <img src="dist/images/mfca.svg" alt="" class="banner__mfca">
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-lg-6">
                         <div class="banner__bg">
                             <div class="banner__pc">
                                 <img src="dist/images/laptop.svg" alt="" class="banner__pc-frame">
@@ -100,17 +100,21 @@
                 <h2 class="title2 how-work__title">Как это работает?</h2>
                 <div class="how-work__main">
                     <div class="row gy-4">
-                        <div class="col-md-4">
+                        <div class="col-md-6 col-xl-4">
                             <div class="info-item info-item_light-green info-item_full">
-                                <h3 class="info-item__title">Займ</h3>
+                                <div class="info-item__header info-item__header_line">
+                                    <h3 class="info-item__title info-item__title_big">Займ</h3>
+                                </div>
                                 <p class="info-item__text tdu">от <strong>10</strong> до <strong>100</strong> млн тенге
                                 </p>
                                 <p class="info-item__text tdu">до <strong>12</strong> месяцев</p>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-6 col-xl-4">
                             <div class="info-item info-item_light-blue info-item_full">
-                                <h3 class="info-item__title">Облигации</h3>
+                                <div class="info-item__header info-item__header_line">
+                                    <h3 class="info-item__title info-item__title_big">Облигации</h3>
+                                </div>
                                 <ol class="info-item__num-list">
                                     <li class="info-item__num-item">
                                         <span>Регистрация</span>
@@ -124,9 +128,11 @@
                                 </ol>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-6 col-xl-4">
                             <div class="info-item info-item_brown info-item_full">
-                                <h3 class="info-item__title">Доля бизнеса</h3>
+                                <div class="info-item__header info-item__header_line">
+                                    <h3 class="info-item__title info-item__title_big">Доля бизнеса</h3>
+                                </div>
                                 <p class="info-item__text tdu">до <strong>150</strong> млн тенге</p>
                             </div>
                         </div>
@@ -502,20 +508,17 @@
             <div class="container">
                 <div class="callback__content">
                     <div class="row">
-                        <div class="col-7">
+                        <div class="col-lg-7">
                             <div class="callback__left">
                                 <div class="callback__title tdu">Привлекайте, инвестируйте</div>
                                 <div class="callback__subtitle tdu">Зарабатывайте</div>
                                 <div class="callback__btns">
                                     <button class="btn callback__btn">Привлечь инвестиции</button>
-                                    <button class="btn callback__btn">Привлечь инвестиции</button>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-5">
+                        <div class="col-lg-5">
                             <div class="callback__right">
-                                <div class="callback__text tdu">Мобильное <br>
-                                    приложение</div>
                                 <div class="callback__downloads">
                                     <a href="#" class="callback__download">
                                         <img class="callback__download-img" src="dist/images/download-google-play.svg"
