--- a/news.html
+++ b/news.html
@@ -648,7 +648,7 @@
                             <div class="mailing__inf">
                                 <h4 class="mailing__title mailing__title_color_second">Получайте свежие новости первыми</h4>
                                 <div class="mailing__text tdu">Будем рассылать о новоедениях, полезных информациях
-                                    <br> на рынке и лайфхаках (Текст доробатать)
+                                    <br> на рынке и лайфхаках (Текст доработать)
                                 </div>
                             </div>
                         </div>
