added adaptive to Referal page

--- a/referal.html
+++ b/referal.html
@@ -66,13 +66,13 @@
     </header>
     <main class="main">
 
-        <!-- <section class="offers">
+        <section class="offers">
             <div class="container">
                 <h1 class="title1">Приглашай, сопровождай, зарабатывай</h1>
                 <p class="offers__subtitle">Вместе мы делаем казахстанский бизнес сильнее</p>
                 <div class="offers__main">
                     <div class="row gy-4">
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <div class="offer box">
                                 <div class="offer__header">
                                     <h3 class="title3 offer__title">Советник</h3>
@@ -111,7 +111,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <div class="offer box">
                                 <div class="offer__header">
                                     <h3 class="title3 offer__title">Брокер</h3>
@@ -156,7 +156,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
     </main>
     <footer class="footer main__footer">
