add adaptive to News page

--- a/news.html
+++ b/news.html
@@ -76,7 +76,7 @@
                     <div class="news__main">
                         <div class="row gy-4">
                             <div class="col-12">
-                                <div class="news-item">
+                                <div class="news-item news-item_preview">
                                     <img src="dist/images/news/1.jpg" alt="" class="news-item__img">
                                     <div class="news-item__main">
                                         <div class="news-item__subtitle">Конференция iKapitalist</div>
@@ -94,14 +94,14 @@
                                 <div class="news-info box news-info_slider swiper">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                            <div class="row">
-                                                <div class="col-md-8">
+                                            <div class="row news-info__row">
+                                                <div class="col-lg-8">
                                                     <div class="news-info__bg">
                                                         <img src="dist/images/news/2.jpg" alt="" class="news-item__img">
                                                         <div class="news-info__name">Новости</div>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-4">
+                                                <div class="col-lg-4 news-info__main-col">
                                                     <div class="news-info__main">
                                                         <h3 class="news-info__title">Рынок акций США закрылся разнонаправленно, Dow
                                                             Jones снизился на 0,17%</h3>
@@ -113,14 +113,14 @@
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
-                                            <div class="row">
-                                                <div class="col-md-8">
+                                            <div class="row news-info__row">
+                                                <div class="col-lg-8">
                                                     <div class="news-info__bg">
                                                         <img src="dist/images/news/2.jpg" alt="" class="news-item__img">
                                                         <div class="news-info__name">Новости</div>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-4">
+                                                <div class="col-lg-4 news-info__main-col">
                                                     <div class="news-info__main">
                                                         <h3 class="news-info__title">Рынок акций США закрылся разнонаправленно, Dow
                                                             Jones снизился на 0,17%</h3>
@@ -132,14 +132,14 @@
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
-                                            <div class="row">
-                                                <div class="col-md-8">
+                                            <div class="row news-info__row">
+                                                <div class="col-lg-8">
                                                     <div class="news-info__bg">
                                                         <img src="dist/images/news/2.jpg" alt="" class="news-item__img">
                                                         <div class="news-info__name">Новости</div>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-4">
+                                                <div class="col-lg-4 news-info__main-col">
                                                     <div class="news-info__main">
                                                         <h3 class="news-info__title">Рынок акций США закрылся разнонаправленно, Dow
                                                             Jones снизился на 0,17%</h3>
@@ -151,14 +151,14 @@
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
-                                            <div class="row">
-                                                <div class="col-md-8">
+                                            <div class="row news-info__row">
+                                                <div class="col-lg-8">
                                                     <div class="news-info__bg">
                                                         <img src="dist/images/news/2.jpg" alt="" class="news-item__img">
                                                         <div class="news-info__name">Новости</div>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-4">
+                                                <div class="col-lg-4 news-info__main-col">
                                                     <div class="news-info__main">
                                                         <h3 class="news-info__title">Рынок акций США закрылся разнонаправленно, Dow
                                                             Jones снизился на 0,17%</h3>
@@ -170,14 +170,14 @@
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
-                                            <div class="row">
-                                                <div class="col-md-8">
+                                            <div class="row news-info__row">
+                                                <div class="col-lg-8">
                                                     <div class="news-info__bg">
                                                         <img src="dist/images/news/2.jpg" alt="" class="news-item__img">
                                                         <div class="news-info__name">Новости</div>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-4">
+                                                <div class="col-lg-4 news-info__main-col">
                                                     <div class="news-info__main">
                                                         <h3 class="news-info__title">Рынок акций США закрылся разнонаправленно, Dow
                                                             Jones снизился на 0,17%</h3>
@@ -196,7 +196,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-md-6 col-lg-4">
                                 <div class="news-item news-item_big news-item_slider">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
@@ -283,7 +283,7 @@
                                     <div class="news-item__pagination"></div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-md-6 col-lg-4">
                                 <div class="news-item news-item_big news-item_slider">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
@@ -370,7 +370,7 @@
                                     <div class="news-item__pagination"></div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-lg-4">
                                 <div class="news-item news-item_big news-item_slider">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
@@ -460,7 +460,7 @@
                             <div class="col-12">
                                 <h2 class="title2 title2_big">Интересное</h2>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <div class="news-item news-item_big news-item_slider">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
@@ -547,7 +547,7 @@
                                     <div class="news-item__pagination"></div>
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <div class="news-item news-item_big news-item_slider">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
@@ -640,28 +640,42 @@
             </div>
         </section>
 
-        <section class="mailing">
+        <section class="callback">
             <div class="container">
-                <div class="mailing__content">
-                    <div class="row align-items-center">
-                        <div class="col-5">
-                            <div class="mailing__inf">
-                                <h4 class="mailing__title mailing__title_color_second">Получайте свежие новости первыми</h4>
-                                <div class="mailing__text tdu">Будем рассылать о новоедениях, полезных информациях
-                                    <br> на рынке и лайфхаках (Текст доработать)
+                <div class="callback__content">
+                    <div class="row">
+                        <div class="col-lg-7">
+                            <div class="callback__left">
+                                <div class="callback__title tdu">Привлекайте, инвестируйте</div>
+                                <div class="callback__subtitle tdu">Зарабатывайте</div>
+                                <div class="callback__btns">
+                                    <button class="btn callback__btn">Привлечь инвестиции</button>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-7">
-                            <form action="#" class="mailing__form">
-                                <input type="email" class="mailing__field" placeholder="Ваш email">
-                                <button class="move-btn mailing__submit">Перейти</button>
-                            </form>
+                        <div class="col-lg-5">
+                            <div class="callback__right">
+                                <div class="callback__downloads">
+                                    <a href="#" class="callback__download">
+                                        <img class="callback__download-img" src="dist/images/download-google-play.svg"
+                                            alt="">
+                                    </a>
+                                    <a href="#" class="callback__download">
+                                        <img class="callback__download-img" src="dist/images/download-app-store.svg"
+                                            alt="">
+                                    </a>
+                                </div>
+                            </div>
                         </div>
+                    </div>
+                    <div class="phone callback__phone">
+                        <img src="dist/images/phone.svg" alt="" class="phone__frame">
+                        <img src="dist/images/index-banner-mobile.jpg" alt="" class="phone__img">
                     </div>
                 </div>
             </div>
         </section>
+
     </main>
     <footer class="footer main__footer">
         <div class="container">
