added articles page

--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
                         <img src="dist/images/about/founder.jpg" alt="" class="founder__avatar-img">
                         <div class="founder__avatar-inf">
                             <h3 class="title3 founder__avatar-name">Нурбек Раев</h3>
-                            <div class="founder__avatar-position">CEO</div>
+                            <!-- <div class="founder__avatar-position">CEO</div> -->
                         </div>
                     </div>
                     <div class="founder__info box">
@@ -270,7 +270,8 @@
                     <a href="./" class="logo footer__logo">
                         <img src="dist/images/logo-white.svg" alt="" class="logo__img">
                     </a>
-                    <p class="footer__about tdu">iKapitalist Ltd. — Инвестиционная и Заёмная Краудфандинговая Платформа</p>
+                    <p class="footer__about tdu">iKapitalist Ltd. — Инвестиционная и Заёмная Краудфандинговая Платформа
+                    </p>
                     <a href="#" class="footer__link footer__link_vacancy">Вакансии</a>
                     <div class="footer__copyright tdu">Copyright © 2020 All rights reserved.</div>
                 </div>
@@ -293,9 +294,10 @@
                         осуществление деятельности в качестве инвестиционной и заёмной краудфандинговой платформы, в
                         тестовом окружении ФинТех лаборатории (регуляторная песочница МФЦА) в соответствии с лицензией
                         АFSA-G-LA-2020-0002 сроком действия до 07.11.2021 года.</p>
-                    <p class="footer__text">Статус лицензии и ее действительность могут быть <br> проверены на сайте AFSA</p>
-
+                    <p class="footer__text">Статус лицензии и ее действительность могут быть <br> проверены на сайте
+                        AFSA</p>
                 </div>
+                <div class="footer__bottom"></div>
             </div>
         </div>
     </footer>
