--- a/referal.html
+++ b/referal.html
@@ -203,7 +203,8 @@
                     <a href="./" class="logo footer__logo">
                         <img src="dist/images/logo-white.svg" alt="" class="logo__img">
                     </a>
-                    <p class="footer__about tdu">iKapitalist Ltd. — Инвестиционная и Заёмная Краудфандинговая Платформа</p>
+                    <p class="footer__about tdu">iKapitalist Ltd. — Инвестиционная и Заёмная Краудфандинговая Платформа
+                    </p>
                     <a href="#" class="footer__link footer__link_vacancy">Вакансии</a>
                     <div class="footer__copyright tdu">Copyright © 2020 All rights reserved.</div>
                 </div>
@@ -226,8 +227,10 @@
                         осуществление деятельности в качестве инвестиционной и заёмной краудфандинговой платформы, в
                         тестовом окружении ФинТех лаборатории (регуляторная песочница МФЦА) в соответствии с лицензией
                         АFSA-G-LA-2020-0002 сроком действия до 07.11.2021 года.</p>
-                    <p class="footer__text">Статус лицензии и ее действительность могут быть <br> проверены на сайте AFSA</p>
+                    <p class="footer__text">Статус лицензии и ее действительность могут быть <br> проверены на сайте
+                        AFSA</p>
                 </div>
+                <div class="footer__bottom"></div>
             </div>
         </div>
     </footer>
