--- a/login.html
+++ b/login.html
@@ -178,7 +178,7 @@
     </main>
     <script src="dist/js/common.js"></script>
 
-    <div class="popup privacy-popup">
+    <div class="popup privacy-popup popup_hide">
         <div class="privacy-popup__content">
             <p><strong>Политика конфиденциальности персональных данных</strong></p>
             <br>
